changed login.html to index.html

--- a/css/login.css
+++ b/css/login.css
@@ -101,6 +101,13 @@ input[type='submit'] {
   text-transform: capitalize;
 }
 
+@media (max-width: 900px) {
+  .form_container {
+    width: 40%;
+    margin: 0 auto;
+  }
+}
+
 @media (max-width: 500px) {
   .form_container {
     width: 80%;
